--- a/client/index.html
+++ b/client/index.html
@@ -6,17 +6,26 @@
   <body class="container">
     <button id="complimentButton">Get a compliment</button>
     <button id="fortuneButton">Get a fortune!</button>
+    <button id="goalButton">Get a random type of goal!</button>
 
-    <label for="goal">What's your goal?</label>
-    <select name="goal">
-      <option value="Long Term">Long Term</option>
-      <option value="Short Term">Short Term</option>
+    
+    <select id="goal">
+      <option value="none" selected disabled hidden>Choose your type of Goal</option>
+      <option id="Long-term" value="Long-term">Long-term</option>
+      <option id="Short-term" value="Short-term">Short-term</option>
+      <option id="Career goal" value="Career goal">Career goal</option>
+      <option id="Academic goal" value="Academic goal">Academic goal</option>
+      <option id="Stretch goal" value="Stretch goal">Stretch goals</option>
+      <option id="Financial goal" value="Financial goal">Financial goals</option>
     </select>
 
-    <label> Type in your goals!
-    <input id="goals" type="text"></label>
+
+    <input id="goals" type="text" placeholder="Type in your goals!">
+
     
-    <input type="submit">
+    <input id="submitButton" type="submit" value="Submit goals">
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0/axios.min.js" integrity="sha512-26uCxGyoPL1nESYXHQ+KUmm3Maml7MEQNWU8hIt1hJaZa5KQAQ5ehBqK6eydcCOh6YAuZjV3augxu/5tY4fsgQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="main.js"></script>
